# PiBoatCore

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
arduino/voltage_sensor_uno/: README.md  voltage_sensor_uno.ino
pi_boat_core/: __main__.py  camera.py  client.py  config.py  local_web.py  models.py  service.py  spool.py
pi_boat_core/sensors/: __init__.py  arduino_voltage.py  audio_activity.py  base.py  mock.py  sim7600.py  system.py
systemd/: piboatcore.service
tests/: test_arduino_voltage.py  test_audio_activity.py  test_camera.py  test_client.py  test_config.py  test_local_web.py  test_models.py  test_service.py  test_sim7600.py  test_sim7600_resilience.py
